sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:12: error: ')' expected but $XMLSTART$< found.
    while (i+ecart <getNombreValeurs()){
                   ^AlgCombSort:12: error: illegal start of simple expression
    while (i+ecart <getNombreValeurs()){
                                      ^